--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <img src="../img/LOGO-JEV-Software-PNG-1-e1659829566323.png" alt="" width="60" height="40" class="align-text-top">
+          <img src="./img/LOGO-JEV-Software-PNG-1-e1659829566323.png" alt="" width="60" height="40" class="align-text-top">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
