--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>jevSoftware</title>
     
     <!--Estilos-->
-    <link href="../assets/header.css" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/style.css">
-    <link rel="stylesheet" href="../assets/asesoria.css">
-    <link rel="stylesheet" href="../assets/simuladores.css">
-    <link rel="stylesheet" href="../assets/arcade.css">
-    <link rel="stylesheet" href="../assets/consultas.css">
+    <link href="./assets/header.css" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/asesoria.css">
+    <link rel="stylesheet" href="./assets/simuladores.css">
+    <link rel="stylesheet" href="./assets/arcade.css">
+    <link rel="stylesheet" href="./assets/consultas.css">
     <!--FontAwesome-->
     <script src="https://kit.fontawesome.com/3a6a7a1eda.js" crossorigin="anonymous"></script>
     <!--Animate-->
@@ -84,7 +84,6 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="../scripts/header.js"></script>
-    <script src="../scripts/main.js"></script>
+    <script src="./scripts/main.js"></script>
 </body>
 </html>
